--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "webpack-dev-server": "^3.11.2"
   }
 }
